objects/Score_Setting__c.object
<CustomObject>
    <description>Used to track the scoring metrics related to a Dealer Score.</description>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Field__c</fullName>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than or equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than or equal to</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <label>Score Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Score Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calculation_Type__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_Value__c</columns>
        <columns>Operator__c</columns>
        <columns>Score_Value__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Filter_Field__c</columns>
        <columns>Filter_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Score Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>